before switch to modules

--- a/files/spl/spl-view4.html
+++ b/files/spl/spl-view4.html
@@ -80,7 +80,7 @@ const rivers_local = new URL('./test/files/dbs/rivers.gpkg', window.location.hre
 const db_small = new URL('./test/files/dbs/db_small.sqlite', window.location.href).toString();
 
 // mountpoint/filename has to be unique.
-/**
+/**/
 //let url = natural_earth_local;
 //let url = rivers_local;
 let url = db_small;
@@ -97,7 +97,7 @@ window.userData = [
 /**/
 
 let program;
-program = "./dctour.js";
+//program = "./dctour.js";
 //program = "./stlouis.js";
 //program = "./london_boroughs.js";
 //program = "./lights.js";
